# phi-grid

./: .gitignore  CMakeLists.txt  main.cpp  odb_parser.hpp  odb_to_linemesh.hpp  odb_types.hpp
designodb_rigidflex/fonts/: standard
designodb_rigidflex/matrix/: .matrix.sum  matrix
designodb_rigidflex/misc/: .attrlist.sum  .data.idf.sum  .info.sum  .metadata.xml.sum  attrlist  data.idf  info  job_name  last_read  last_save  log-genesis186a1.inh-saram-lt.13900  metadata.xml  signature  sysattr  sysattr.dfm  sysattr.frontline  sysattr.gen  sysattr.mentor  sysattr.test  sysattrz  userattr  wizard.state.xml
designodb_rigidflex/steps/cellular_flip-phone/: .attrlist.sum  .profile.sum  .stephdr.sum  .zones.sum  attrlist  stephdr  zones
designodb_rigidflex/symbols/sc_join0201_hd/: .features.sum  features
designodb_rigidflex/symbols/sc_join0201_hd_sm/: .features.sum  features
designodb_rigidflex/symbols/sc_join0201_hd_sm_50um/: .features.sum  features
designodb_rigidflex/symbols/sc_join0201w_hd/: .features.sum  features
designodb_rigidflex/symbols/sc_join0201w_hd_sm/: .features.sum  features
designodb_rigidflex/symbols/sc_join0201w_hd_sm_50um/: .features.sum  features
designodb_rigidflex/symbols/special0.300x0.330/: .features.sum  features
designodb_rigidflex/symbols/special0.440x0.560/: .features.sum  features
designodb_rigidflex/symbols/special0.440x0.560wide/: .features.sum  features
designodb_rigidflex/symbols/special0.500x0.800_sm/: .features.sum  features
odb/matrix/: matrix
odb/steps/pcb/: profile
odbparse/: main.cpp  odb_parser.hpp
(+728 files in other folders)
